--- a/justin.mac.config.yml
+++ b/justin.mac.config.yml
@@ -308,3 +308,5 @@ selenium_version: 2.46.0
 # Other configuration.
 dashboard_install_dir: /var/www/dashboard
 known_hosts_path: ~/.ssh/known_hosts
+
+selenium_install_firefox: "true"
