--- a/justin.windows.config.yml
+++ b/justin.windows.config.yml
@@ -260,6 +260,7 @@ composer_home_path: '/home/vagrant/.composer'
 composer_global_packages:
 - { name: drupal/drupal-extension, release: '*' }
 - { name: phpunit/phpunit, release: '@stable' }
+- { name: behatch/contexts, release: '*' }
 # - { name: behat/mink, release: '1.5.*@stable' }
 # - { name: behat/mink-goutte-driver, release: '*' }
 # - { name: behat/mink-selenium2-driver, release: '*' }
